# joyride

./: .bwconfig  AppIcon.icns  CLAUDE.md  Cargo.toml  Info.plist  LICENSE  README.md  flake.nix  result
crates/joyride/: Cargo.toml
crates/joyride-config/: Cargo.toml
crates/joyride-config/src/: lib.rs
crates/joyride-core/: Cargo.toml
crates/joyride-core/src/: appwatcher.rs  gamepad.rs  lib.rs  mouse.rs  settings.rs  translator.rs
crates/joyride-ui/: Cargo.toml
crates/joyride-ui/src/: lib.rs  settings_window.rs  statusbar.rs
crates/joyride/src/: main.rs
issues/: jr-2k6.json  jr-2m1.1.json  jr-2m1.2.json  jr-2m1.3.json  jr-2m1.4.json  jr-2m1.5.json  jr-2m1.json  jr-45w.json  jr-8w9.json  jr-b6m.json  jr-byo.1.json  jr-byo.2.json  jr-byo.3.json  jr-byo.4.json  jr-byo.5.json  jr-byo.6.json  jr-byo.json  jr-cpk.json  jr-cx1.1.json  jr-cx1.2.json  jr-cx1.3.json  jr-cx1.4.json  jr-cx1.5.json  jr-cx1.6.json  jr-cx1.7.json  jr-cx1.8.json  jr-cx1.json  jr-g4i.json  jr-le5.json  jr-m17.1.json  jr-m17.2.json  jr-m17.3.json  jr-m17.4.json  jr-m17.5.json  jr-m17.json  jr-mis.json  jr-n19.json  jr-o0d.json  jr-o1c.json  jr-qov.json  (+10 more)
nix/: darwin-module.nix
src/: config.rs  main.rs  settings.rs  settings_window.rs  statusbar.rs
