[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
joyride-config = { path = "crates/joyride-config" }
joyride-core = { path = "crates/joyride-core" }
joyride-ui = { path = "crates/joyride-ui" }
objc2 = "0.6"
objc2-foundation = "0.3"
objc2-app-kit = "0.3"
objc2-game-controller = "0.3"
core-graphics = { version = "0.25", features = ["highsierra"] }
core-foundation = "0.10"
accessibility-sys = "0.2"
block2 = "0.6"
